--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Awesome title</h1>
 <script src="app.js" charset="utf-8"></script>
+      <h2> ! Somos un Gran Equipo de Ñonas ¡ </h2>
   </body>
 </html>
