--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>World's greatest page </title>
   </head>
   <body>
+    <h1>Awesome title</h1>
 <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
