--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Awesome title: Soy tan cool</h1>
+    <h2>yo tambien soy cool</h2>
 <script src="app.js" charset="utf-8"></script>
   </body>
 </html>
